[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/SelectionScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/pngs/bg.png" type="Texture" id=2]
[ext_resource path="res://Assets/fonts/Friendly Schoolmates (Regular) Font by Situjuh (7NTypes).otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/characters/ninjaboy/idle/Idle__009-0.png" type="Texture" id=4]
[ext_resource path="res://Assets/characters/ninjagirl/idle/idle-0.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

size = 72
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="SelectionScreen" type="Node2D"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Control" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Title" type="Label" parent="Control" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -510.5
margin_right = 510.5
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Select your avatar"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Control" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -125.0
margin_right = 206.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 150
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="boy" type="TextureButton" parent="Control/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 116.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 58, 125 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="girl" type="TextureButton" parent="Control/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 266.0
margin_right = 397.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 65, 112 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[connection signal="button_up" from="Control/HBoxContainer/boy" to="." method="_on_boy_button_up"]

[connection signal="mouse_entered" from="Control/HBoxContainer/boy" to="." method="_on_boy_mouse_entered"]

[connection signal="mouse_exited" from="Control/HBoxContainer/boy" to="." method="_on_boy_mouse_exited"]

[connection signal="button_up" from="Control/HBoxContainer/girl" to="." method="_on_girl_button_up"]

[connection signal="mouse_entered" from="Control/HBoxContainer/girl" to="." method="_on_girl_mouse_entered"]

[connection signal="mouse_exited" from="Control/HBoxContainer/girl" to="." method="_on_girl_mouse_exited"]


